# ai_for_engineering_training

./: .gitignore  README.md  main.py  pyproject.toml
numpy/: basics.ipynb  exercises.ipynb
rag/movie_recommendation/: .env.example  alembic.ini  docker-compose.yaml
rag/movie_recommendation/alembic/: env.py
rag/movie_recommendation/alembic/versions/: 2025-04-23_18-34-16_user_and_chat_session_tables.py
rag/movie_recommendation/scripts/: generate_embeddings.py
rag/movie_recommendation/src/: main.py
rag/movie_recommendation/src/api/v1/: api_routers.py
rag/movie_recommendation/src/api/v1/routers/: agent.py  chat.py  user.py
rag/movie_recommendation/src/core/: agent.py  auth_manager.py  rag.py
rag/movie_recommendation/src/db/: base_class.py  dependencies.py  session.py  vector_db.py
rag/movie_recommendation/src/helpers/: web_search.py
rag/movie_recommendation/src/mcp_servers/: movie_search_server.py
rag/movie_recommendation/src/models/: __init__.py  chat_session.py  user.py
rag/movie_recommendation/src/monitoring/: langfuse_provider.py
rag/movie_recommendation/src/repositories/: base.py  chat.py  user.py
rag/movie_recommendation/src/schemas/: __init__.py  agent.py  chat.py  types.py  user.py
rag/movie_recommendation/src/services/: agent.py  chat.py  user.py
rag/movie_recommendation/src/settings/: settings.py
